// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="src-components-event-talent__container"
>
  <img
    className="src-components-event-talent__img"
    src="https://images.test.com/12/34/12345678/120x120.jpg"
  />
  <div
    className="src-components-event-talent__details"
  >
    <p
      className="src-components-event-talent__roles"
    >
      Roles string
    </p>
    <p
      className="src-components-event-talent__characters"
    >
      Characters string
    </p>
    <h4>
      <Link
        replace={false}
        to="/talent/talent-2"
      />
    </h4>
  </div>
</div>
`;

exports[`should render correctly when there are no characters 1`] = `
<div
  className="src-components-event-talent__container"
>
  <img
    className="src-components-event-talent__img"
    src="https://images.test.com/12/34/12345678/120x120.jpg"
  />
  <div
    className="src-components-event-talent__details"
  >
    <p
      className="src-components-event-talent__roles"
    >
      Roles string
    </p>
    <h4>
      <Link
        replace={false}
        to="/talent/talent-2"
      />
    </h4>
  </div>
</div>
`;

exports[`should render correctly when there is no image 1`] = `
<div
  className="src-components-event-talent__container"
>
  <ImagePlaceholder
    className="src-components-event-talent__placeholder"
    size="very-small"
    type="talent"
  />
  <div
    className="src-components-event-talent__details"
  >
    <p
      className="src-components-event-talent__roles"
    >
      Roles string
    </p>
    <p
      className="src-components-event-talent__characters"
    >
      Characters string
    </p>
    <h4>
      <Link
        replace={false}
        to="/talent/talent-2"
      />
    </h4>
  </div>
</div>
`;
